Nav HTML finished, added photos for header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 
 <body>
     <div class="container">
-   
+        <header>
+        <div class="header-content">
+          <img class="img1" src="img/lambda-black.png" alt="img">
+          <nav>
+                <a class="nav-top" href="#">Home</a>
+                <a class="nav-top" href="about.html">About</a>
+                <a class="nav-top" href="#">Products</a>
+                <a class="nav-top" href="#">Blog</a>
+                <a class="nav-top" href="#">Contact</a>
+            </nav>
+          <img class="img" src="img/jumbo.jpg" alt="photo">
+        </header>
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
