--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-                <div class="box">Box 4</div>
-                <div class="box">Box 5</div>
-                <div class="box">Box 6</div>
-                <div class="box">Box 7</div>
-                <div class="box">Box 8</div>
-                <div class="box">Box 9</div>
-                <div class="box">Box 10</div>
+                <div id="first" class="box">Box 1</div>
+                <div id="second" class="box">Box 2</div>
+                <div id="third" class="box">Box 3</div>
+                <div id="fourth" class="box">Box 4</div>
+                <div id="fifth" class="box">Box 5</div>
+                <div id="sixth" class="box">Box 6</div>
+                <div id="seventh" class="box">Box 7</div>
+                <div id="eigth" class="box">Box 8</div>
+                <div id="ninth" class="box">Box 9</div>
+                <div id="tenth" class="box">Box 10</div>
             </div>
         
         </section>
