--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <div class="header-content-about">
           <img class="img1About" src="img/lambda-black.png" alt="img">
           <nav>
-                <a class="nav-top" href="#">Home</a>
+                <a class="nav-top" href="index.html">Home</a>
                 <a class="nav-top" href="about.html">About</a>
                 <a class="nav-top" href="#">Products</a>
                 <a class="nav-top" href="#">Blog</a>
@@ -24,52 +24,61 @@
         </header>
     <body>
         <div class="container about-page">
+            <section class="about-topOrBottom">
+                <div class="about-blockSec">
+                    <h2>About</h2>
 
-        About
+                    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
+                    </p>
+                </div>
+            </section>
+            <section class="about-main">
+                <div class="about-sec">
+                    <img src="img/about-plan.png" alt="strategy">
 
-        Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
+                    <h2>Strategy</h2>
 
+                    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
 
-        <img src="img/about-plan.png" alt="strategy">
+                    <button>Learn More</button>
+                </div>
+                <div class="about-sec">
+                    <img src="img/about-working.png" alt="strategy">
 
-        Strategy
+                    <h2>How We Work</h2>
 
-        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+                    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
 
-        Learn More
+                    <button>Learn More</button>
+                </div>
+                <div class="about-sec">
 
+                    <img src="img/about-office.png" alt="strategy">
 
+                    <h2>Places We Work</h2>
 
-        <img src="img/about-working.png" alt="strategy">
+                    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
 
-        How We Work
+                    <button>Learn More</button>
+                </div>
+                <div class="about-sec">
+                    <img src="img/about-meeting.png" alt="strategy">
 
-        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+                    <h2>Collaboration</h2>
 
-        Learn More
+                    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
 
+                    <button>Learn More</button>
+                </div>
+            </section>
+            <section class="about-topOrBottom">
+                <div class="about-blockSec">
+                    <h2>About</h2>
 
-
-        <img src="img/about-office.png" alt="strategy">
-
-        Places We Work
-
-        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-        Learn More
-
-        <img src="img/about-meeting.png" alt="strategy">
-
-        Collaboration
-
-        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-        Learn More
-
-        Let's Work Together
-
-        Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-
+                    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
+                    </p>
+                </div>
+            </section>
           <footer>
             <nav>
               <a href="index.html">Home</a>
