fixed header issue in about.html

--- a/about.html
+++ b/about.html
@@ -10,20 +10,22 @@
   <link rel="stylesheet" href="css/index.css">
 
 </head>
-    <header>
-        <div class="header-content-about">
-          <img class="img1About" src="img/lambda-black.png" alt="img">
-          <nav>
-                <a class="nav-top" href="index.html">Home</a>
-                <a class="nav-top" href="about.html">About</a>
-                <a class="nav-top" href="#">Products</a>
-                <a class="nav-top" href="#">Blog</a>
-                <a class="nav-top" href="#">Contact</a>
-            </nav>
-          <img class="imgAbout" src="img/jumbo-about.png" alt="photo">
-        </header>
     <body>
+        
         <div class="container about-page">
+            <header>
+                <div class="header-content-about">
+                  <img class="img1About" src="img/lambda-black.png" alt="img">
+                  <nav>
+                        <a class="nav-top" href="index.html">Home</a>
+                        <a class="nav-top" href="about.html">About</a>
+                        <a class="nav-top" href="#">Products</a>
+                        <a class="nav-top" href="#">Blog</a>
+                        <a class="nav-top" href="#">Contact</a>
+                    </nav>
+                  <img class="imgAbout" src="img/jumbo-about.png" alt="photo">
+                </div> 
+            </header>
             <section class="about-topOrBottom">
                 <div class="about-blockSec">
                     <h2>About</h2>
