finished about.html css

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
               <img class="imgAbout" src="img/jumbo-about.png" alt="photo">
             </div> 
         </header>
-        <section class="about-topOrBottom">
+        <section class="about-top">
             <div class="about-blockSec">
                 <h2>About</h2>
 
@@ -36,11 +36,10 @@
         <section class="about-main">
             <div class="about-sec">
                 <img src="img/about-plan.png" alt="strategy">
-
                 <h2>Strategy</h2>
-
+                
                 <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-
+                
                 <button>Learn More</button>
             </div>
             <div class="about-sec">
@@ -72,9 +71,9 @@
                 <button>Learn More</button>
             </div>
         </section>
-        <section class="about-topOrBottom">
+        <section class="about-bottom">
             <div class="about-blockSec">
-                <h2>About</h2>
+                <h2>Let's Work Together</h2>
 
                 <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
                 </p>
