Stretch: Added Products Page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <nav>
                 <a class="nav-top" href="#">Home</a>
                 <a class="nav-top" href="about.html">About</a>
-                <a class="nav-top" href="#">Products</a>
+                <a class="nav-top" href="products.html">Products</a>
                 <a class="nav-top" href="#">Blog</a>
                 <a class="nav-top" href="#">Contact</a>
             </nav>
@@ -74,9 +74,9 @@
         
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Products</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="products.html">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
             </nav>
