--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
               <nav>
                     <a class="nav-top" href="index.html">Home</a>
                     <a class="nav-top" href="about.html">About</a>
-                    <a class="nav-top" href="#">Products</a>
+                    <a class="nav-top" href="products.html">Products</a>
                     <a class="nav-top" href="#">Blog</a>
                     <a class="nav-top" href="#">Contact</a>
                 </nav>
@@ -82,8 +82,8 @@
       <footer>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">About</a>
-          <a href="#">Products</a>
+          <a href="about.html">About</a>
+          <a href="products.html">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
